app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 // control the screen sizes

/* uncomment and modify to change defaults bootstrap sizes  */

$screen-xs-min: 300px;
$screen-sm-min: 400px;
$screen-md-min: 1000px;
$screen-lg-min: 1200px;

// this tells which screen size to use to start breaking on
// will tell navbar when to collapse
$grid-float-breakpoint: $screen-md-min;



@import "bootstrap-sprockets";
@import "bootstrap";

/* User sign in and sign forms. */
/*.border-form-div {
  max-width: 300px;
  padding: 19px 29px 29px;
  margin: 0 auto 20px;
  background-color: #fff;
  border: 1px solid #e5e5e5;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
          box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.border-form-div .form-signin-heading,
.border-form-div .checkbox {
  margin-bottom: 10px;
}
.border-form-div input[type="text"],
.border-form-div input[type="email"],
.border-form-div input[type="password"] {
  font-size: 16px;
  height: auto;
  margin-bottom: 15px;
  padding: 7px 9px;
}
*/

/* universal */
.border-form-div {
  text-align: center;
}

.row-title1 {
  font-style: italic;
}

body {
  padding-top: 50px;
}

nav .container {
    padding: 0px 20px 0px 0px;
    margin: 0px 10px;
    width: 100%;
}

.container {
    padding: 0px;
    margin: 0px;
    width: 100%; 
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #777;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

.scrollable-menu {
    height: auto;
    max-height: 50vh;
    overflow-x: hidden;
    overflow-y: scroll;
}

/*.nav, .navbar-nav, .navbar-right {
    width: auto !important; 
}*/

.navbar-form {
  margin: 8px 0;
}

::-webkit-input-placeholder {
   text-align: center;
}

:-moz-placeholder { /* Firefox 18- */
   text-align: center;  
}

::-moz-placeholder {  /* Firefox 19+ */
   text-align: center;  
}

:-ms-input-placeholder {  
   text-align: center; 
}

input{
  margin: 0px auto;
}

@media (min-width: $screen-sm-min) {

  .form-control {
    width: 300px;
  }

}

.img-small {
  width: 160px;
}

.show-on-small-device {
  display: none;
}

@media (max-width: $screen-sm-min) {

  .hide-on-small-device {
    display: none;
  }
  
  .show-on-small-device {
    display: inline;
  }
  
  .img-full-width
  {
    width: 100%;
    z-index: 0;
  }

  .img-small {
    width: 140px;
  }

  .row-title1 {
    font-size: x-small;
  }

  .scrollable-menu {
    max-height: 300px;
  }

}

.control-group {
  margin: 10px;
}

#nav-butons {
  margin: 8px;
}

/*.btn-my {
  //@include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
  @include button-variant(white, #222, #222);
}*/

.btn-my{
    background: #0099cc;
    color: #ffffff;
}
.btn-my:hover { 
  border-color: #C0C0C0; 
  background-color: #C0C0C0; 
}

.container > .navbar-header {
    margin-left: 0;
}

.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
  height: auto;
  max-height: 80vh;
  overflow-y: scroll;
}

  

